fix:針對scribe檔案做刪減
